# chip8_emulator

./: CMakeLists.txt  README.md
src/: chip8.c  chip8.h  graphics.c  instructions.c  main.c
